2008-09-29  Christian Persch  <chpe@gnome.org>

        Bug 554224 – format not a string literal and no format arguments

        * browser-plugin/totem-plugin-viewer.c: Use %s to printf a string.

2008-09-29  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/README.browser-plugin: Fix typo spotted
	by Yan Morin <progysm@gmail.com>, the keyword is "disabled", not
	"disable"

2008-09-21  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: Fix dist

2008-09-21  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui:
	* src/totem-menu.c (add_lang_action), (create_lang_actions),
	(totem_languages_update), (totem_subtitles_update): Add the
	subtitle and languages menus to the fullscreen popup as well
	(Closes: #164036)

2008-09-20  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/tracker/totem-tracker-widget.c (get_search_count):
	* src/totem-playlist.c (totem_playlist_error): Fix using unvetted
	strings in printf-style functions.
	* data/totem.schemas.in:
	* src/totem-menu.c (about_action_callback):
	* src/totem-options.c: Fix some hyphenation problems in strings, and
	update the copyright date in the about dialogue.

2008-09-18  Bastien Nocera  <hadess@hadess.net>

	* COPYING.LIB: Remove obsolete file, spotted by
	Christian Persch

2008-09-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (totem_action_remote): Fix missing break
	statement, spotted by Robin Stocker <robin@nibor.org>

2008-09-11  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* configure.in: Add a check for gst-inspect.
	(Closes: #551774)

2008-09-10  Bastien Nocera  <hadess@hadess.net>

	* data/totem.schemas.in: Add schemas for the visuals
	quality and connection speed settings, patch from
	Eric Piel <e.a.b.piel@tudelft.nl> (Closes: #535505)
	* src/backend/bacon-video-widget.h: Force the first item
	of the visuals quality enum to be 0

2008-09-09  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt:
	* src/totem-menu.c (totem_action_add_recent):